Error spam in console when Spreadsheet Editor is open #94594

Closed
opened 2022-01-03 11:59:31 +01:00 by Simon Thommes · 6 comments
Member

System Information
Operating system: Linux-5.15.8-76051508-generic-x86_64-with-glibc2.34 64 Bits
Graphics card: AMD Radeon RX 6700 XT (NAVY_FLOUNDER, DRM 3.42.0, 5.15.8-76051508-generic, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.2.2

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: ea8d749587
Worked: (newest version of Blender that worked as expected)

Short description of error
image.png
Error, region type 2 missing in - name:"Spreadsheet", id:23 is spammed in the console when interacting with the window and the spreadsheet editor is showing.

Exact steps for others to reproduce the error
Open Blender and go to the Geometry Nodes Workspace.
Make changes to the window in any way like moving the window or resizing the editor areas.

**System Information** Operating system: Linux-5.15.8-76051508-generic-x86_64-with-glibc2.34 64 Bits Graphics card: AMD Radeon RX 6700 XT (NAVY_FLOUNDER, DRM 3.42.0, 5.15.8-76051508-generic, LLVM 12.0.1) AMD 4.6 (Core Profile) Mesa 21.2.2 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: `ea8d749587` Worked: (newest version of Blender that worked as expected) **Short description of error** ![image.png](https://archive.blender.org/developer/F12786420/image.png) `Error, region type 2 missing in - name:"Spreadsheet", id:23` is spammed in the console when interacting with the window and the spreadsheet editor is showing. **Exact steps for others to reproduce the error** Open Blender and go to the Geometry Nodes Workspace. Make changes to the window in any way like moving the window or resizing the editor areas.
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Simon Thommes changed title from Error spam in console to Error spam in console when Spreadsheet Editor is open 2022-01-03 12:02:16 +01:00

Added subscribers: @HooglyBoogly, @erik85

Added subscribers: @HooglyBoogly, @erik85

This was something @HooglyBoogly introduced and is going to fix.

This was something @HooglyBoogly introduced and is going to fix.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2022-01-03 19:52:01 +01:00

This issue was referenced by 1b9e103a30

This issue was referenced by 1b9e103a308c3ba20853487e1297df0653263ac9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94594
No description provided.